# rcada

./: Cargo.toml  README.md  flake.nix  rustfmt.toml
rcada_client/: Cargo.toml
rcada_client/src/: main.rs
rcada_core/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
rcada_core/src/: lib.rs  tag.rs  unit.rs  value.rs
rcada_modbus_simulator/: Cargo.toml  README.md
rcada_modbus_simulator/src/: main.rs
rcada_server/: Cargo.toml
rcada_server/src/: main.rs  message.rs
rcada_server/src/actor/: tag.rs
rcada_server/src/api/: mod.rs  models.rs
rcada_server/src/api/health/: handlers.rs  mod.rs
rcada_server/src/api/tags/: handlers.rs  mod.rs  model.rs
rcada_server/src/broker/: mod.rs  system_broker.rs
rcada_server/src/bus/: mod.rs
rcada_server/src/bus/mock/: mod.rs
rcada_server/src/container/: mod.rs
rcada_server/src/repository/tag/: inmemory.rs  mod.rs
rcada_server/src/tag_storage/: inmemory.rs  message.rs  mod.rs
rcada_server/src/tag_storage/adapter/: inmemory.rs
rcada_server/src/tag_storage/command/: create_tag.rs  delete_tag.rs  mod.rs  update_value.rs
rcada_server/src/tag_storage/query/: list_tags.rs  mod.rs  read_tag.rs
