[package]
name = "rcada_client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors.workspace = true

[dependencies.iced]
version = "0.14"
features = ["canvas", "tokio"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rcada_core]
path = "../rcada_core"
