[package]
name = "rcada_server"
version = "0.1.0"
edition = "2024"

[dependencies.rcada_core]
path = "../rcada_core"

[dependencies.dashmap]
workspace = true

[dependencies.chrono]
workspace = true
features = ["clock", "serde"]

[dependencies.actix-web]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-actix-web]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.async-trait]
version = "0.1"

[dependencies.tokio]
workspace = true

